Refactor AdminMenu component; remove expanding details functionality for menu items, streamline UI, and enhance the add menu button for improved user experience.

--- a/todo
+++ b/todo
@@ -1,8 +1,10 @@
-Schema for orders 
+
+Menu - Remove Expanding | Make it Like Figma also Add Menu | Test it on Live Device - PR
 Add orders page with details - Tables | Users | Kitchen 
 View orders
 Kitchen Process Orders 
 Kitchen View Orders | Updated 
+
 Notification System Push In Whatsapp
 Load Menu 
 Genrate Photos | Menu Enchaments 
