Update todo list for menu enhancements and add order table schema; streamline menu item details and introduce order management structure with user and kitchen status fields.

--- a/todo
+++ b/todo
@@ -1,7 +1,8 @@
 
-Menu - Remove Expanding | Make it Like Figma also Add Menu | Test it on Live Device - PR
+Menu | Make it Like Figma also Add Menu | Test it on Live Device - PR
 Add orders page with details - Tables | Users | Kitchen 
 View orders
+
 Kitchen Process Orders 
 Kitchen View Orders | Updated 
 
