Update todo list with new styling tasks for Admin pages and modify button styles in AdminMenu component to align with Figma design specifications.

--- a/todo
+++ b/todo
@@ -11,6 +11,9 @@ Genrate Photos | Menu Enchaments
 
 
 Phase 2 
+Fix Styling - Admin all the page - Figma Clone UI 
+
+
 
 Users - Ordering  
 OTP Auth Checkout | https://www.mtalkz.com/otp-authenticator?utm_source=chatgpt.com - Mandatory 
