Update todo list with new tasks and enhance segmented control styling for improved UI consistency across components.

--- a/todo
+++ b/todo
@@ -1,24 +1,11 @@
-
 Add orders page with details - Tables | Users | Kitchen 
 View orders
-
 Kitchen Process Orders 
-Kitchen View Orders | Updated 
-
-Notification System Push In Whatsapp
-Load Menu 
+Kitchen View Orders | Updated Load Menu 
 Genrate Photos | Menu Enchaments 
-
-
-Phase 2 
+Notification System Push In Whatsapp
 Fix Styling - Admin all the page - Figma Clone UI 
-
-
-
 Users - Ordering  
 OTP Auth Checkout | https://www.mtalkz.com/otp-authenticator?utm_source=chatgpt.com - Mandatory 
 Table QRS 
 AI Diet Genration 
-
-
-
