Update AdminMenu component styles for improved layout and typography. Adjusted item display, enhanced button styles, and added new tasks to the todo list for better UI consistency.

--- a/todo
+++ b/todo
@@ -9,3 +9,4 @@ Users - Ordering
 OTP Auth Checkout | https://www.mtalkz.com/otp-authenticator?utm_source=chatgpt.com - Mandatory 
 Table QRS 
 AI Diet Genration 
+Tv - Split Payments
