Implement empty state components for cart, favourites, my orders, and notifications with enhanced UI and navigation. Each component now includes illustrations, informative text, and buttons to guide users to explore items, improving overall user experience.

--- a/todo
+++ b/todo
@@ -1,3 +1,11 @@
+Today 
+
+1.Fix Card Heights 
+2.Create Order as Kitcken fill details like yumyard order
+3.Empty States and add the empty states
+
+///////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 Add orders page with details - Tables | Users | Kitchen 
 View orders
 Kitchen Process Orders 
@@ -10,3 +18,5 @@ OTP Auth Checkout | https://www.mtalkz.com/otp-authenticator?utm_source=chatgpt.
 Table QRS 
 AI Diet Genration 
 Tv - Split Payments
+
+///////////////////////////////////////////////////////////////////////////////////////////////////////////////
