--- a/todo
+++ b/todo
@@ -1,10 +1,6 @@
-Today 
-
-1.Fix Card Heights 
-2.Create Order as Kitcken fill details like yumyard order
-3.Empty States and add the empty states
-
-///////////////////////////////////////////////////////////////////////////////////////////////////////////////
+Fix Card Heights 
+Create Order as Kitcken fill details like yumyard order
+Empty States and add the empty states
 
 Add orders page with details - Tables | Users | Kitchen 
 View orders
@@ -18,5 +14,3 @@ OTP Auth Checkout | https://www.mtalkz.com/otp-authenticator?utm_source=chatgpt.
 Table QRS 
 AI Diet Genration 
 Tv - Split Payments
-
-///////////////////////////////////////////////////////////////////////////////////////////////////////////////
