Refactor OrderCompleted page styling for improved UI consistency and enhance order management features. Add new admin view for orders and update notification system for VIP users.

--- a/todo
+++ b/todo
@@ -1,12 +1,13 @@
-Create Order as Kitcken fill details like yumyard order
 Empty States and add the empty states
-
+View orders - Admin 
 Add orders page with details - Tables | Users | Kitchen 
-View orders
 Kitchen Process Orders 
 Kitchen View Orders | Updated Load Menu 
+Multi Photos
 Genrate Photos | Menu Enchaments 
-Notification System Push In Whatsapp
+
+Notification System Push In Whatsapp - VIP 
+
 Fix Styling - Admin all the page - Figma Clone UI 
 Users - Ordering  
 OTP Auth Checkout | https://www.mtalkz.com/otp-authenticator?utm_source=chatgpt.com - Mandatory 
