Enhance AdminOrders component by integrating order fetching with menu details, improving order display with status indicators, and adding loading states. Update next.config.ts to allow images from Unsplash and add date-fns dependency for date formatting.

--- a/todo
+++ b/todo
@@ -1,14 +1,9 @@
 Empty States and add the empty states
-View orders - Admin 
+Kitchen View Orders | Updated Load Menu 
 Add orders page with details - Tables | Users | Kitchen 
 Kitchen Process Orders 
-Kitchen View Orders | Updated Load Menu 
-Multi Photos
-Genrate Photos | Menu Enchaments 
-
+Load Menu Data
 Notification System Push In Whatsapp - VIP 
-
-Fix Styling - Admin all the page - Figma Clone UI 
 Users - Ordering  
 OTP Auth Checkout | https://www.mtalkz.com/otp-authenticator?utm_source=chatgpt.com - Mandatory 
 Table QRS 
