Enhance OrderDetails component to include user details and improve order management functionality. Implement fetching of order details with user information, update UI for better clarity, and streamline order status updates. Add new test file for comprehensive testing of order details functionality.

--- a/todo
+++ b/todo
@@ -1,11 +1,36 @@
-Empty States and add the empty states
-Kitchen View Orders | Updated Load Menu 
-Add orders page with details - Tables | Users | Kitchen 
-Kitchen Process Orders 
-Load Menu Data
+Admin -- 
+Add Order Details Page With Modifying Order 
+Add Empty States 
+
+* Test the Flow |  Load Menu Data - Live Server
+
+Kitchen -- 
+Add Middle WearAuth
+Shows Todays Orders 
+Update Order Status 
+Order Details Page - Tables | Walkin | Delivery
+
 Notification System Push In Whatsapp - VIP 
-Users - Ordering  
+
+* Test the Flow 
+
+Tables
+Create Order - ViewOrder | Name Number - Verification
+Test The Flow 
+
+User
+Users - Ordering  Complete Flow
+Empty States and add the empty states
 OTP Auth Checkout | https://www.mtalkz.com/otp-authenticator?utm_source=chatgpt.com - Mandatory 
-Table QRS 
-AI Diet Genration 
+
+
 Tv - Split Payments
+APP for Kitcken 
+Admin Dashboard Export Csv
+
+AI Diet Planner - Extra 
+Sheduled Delivery 
+Meal Plans
+Party Events Update
+Holidays 
+
