Refactor layout components across admin, kitchen, and login pages to improve responsiveness and styling. Remove AdminDashboard component to streamline the application structure. Update todo list with critical fixes and styling guidelines.

--- a/todo
+++ b/todo
@@ -1,14 +1,13 @@
-Admin -- 
-* Test the Flow |  Load Menu Data - Live Server
+Critical Fix Dont Give Up 
 
-
-
-* Test the Flow Kitchen 
+- Styling Guide Live Device 
+- Fix all the Pages
 
 Tables
 Create Order - ViewOrder | Name Number - Verification
 
 * Test The Flow For tables 
+
 
 User
 Users - Ordering  Complete Flow
