Refactor layout and styling in AdminMenu and SegmentedControl components for improved visual consistency. Update todo list to reflect design fixes and additional features.

--- a/todo
+++ b/todo
@@ -1,13 +1,7 @@
-Critical Fix Dont Give Up 
-
-- Styling Guide Live Device 
-- Fix all the Pages
+- Design Fix all the Pages
 
 Tables
 Create Order - ViewOrder | Name Number - Verification
-
-* Test The Flow For tables 
-
 
 User
 Users - Ordering  Complete Flow
@@ -15,12 +9,11 @@ Empty States and add the empty states
 OTP Auth Checkout | https://www.mtalkz.com/otp-authenticator?utm_source=chatgpt.com - Mandatory 
 
 
+Extra's
+
 Tv - Split Payments
 APP for Kitcken 
 Admin Dashboard Export Csv
-
-
-
 Notification System Push In Whatsapp - VIP 
 AI Diet Planner - Extra 
 Sheduled Delivery 
