Update Admin Page to fix image count display, enhance menu item visibility, and adjust global styles for improved UI consistency.

--- a/todo
+++ b/todo
@@ -1,4 +1,9 @@
-- Design Fix all the Pages
+- Fix the Image Count in the Admin Page Menu
+- Order Details Page
+- 
+
+
+
 
 Tables
 Create Order - ViewOrder | Name Number - Verification
