Refactor Kitchen component structure by removing unused code, adding segmented control for navigation, and creating new pages for 'Out For Delivery' and 'View Order' to improve organization and user experience.

--- a/todo
+++ b/todo
@@ -1,11 +1,9 @@
-- Fix the Image Count in the Admin Page Menu
-- Order Details Page
-- 
+Kitchen Rehaul 
+add 10 items
 
 
+Tables - System
 
-
-Tables
 Create Order - ViewOrder | Name Number - Verification
 
 User
