Update todo list and enhance table layout with improved header and back button functionality
- Added new items to the todo list for static cards, search functionality, and cart details.
- Updated the table layout header to include a back button and adjusted styling for better visibility and user experience.

--- a/todo
+++ b/todo
@@ -1,5 +1,13 @@
 Tables - System
-Create Order - ViewOrder | Name Number - Verification
+
+Cards - Static 
+Search - Show Names in DropDown  - on click Details  
+View Details 
+Cart 
+Tables  Cart -> name | number | payment -> Send order Details Over SMS 
+
+
+
 
 User
 Users - Ordering  Complete Flow
