Update todo list and modify table item rendering for improved clarity
- Revised the todo list to include specific card details for better task tracking.
- Adjusted the rendering logic in the table page to simplify the border styling for item separation, enhancing visual clarity.

--- a/todo
+++ b/todo
@@ -1,7 +1,6 @@
 Tables - System
 
-Cards - Static 
-Search - Show Names in DropDown  - on click Details  
+Cards - Static  | Free Home Delivery | Try Burgers | Tandoor | 5 cards
 View Details 
 Cart 
 Tables  Cart -> name | number | payment -> Send order Details Over SMS 
