Enhance table details page and update todo structure for better navigation
- Updated the todo list to include new sections for banners, category chips, and item details, improving task organization.
- Refactored the TablesDetails component to include a loading spinner and a redirect mechanism, enhancing user experience by guiding users away from unauthorized access.

--- a/todo
+++ b/todo
@@ -1,9 +1,21 @@
-Tables - System
+Tables 
 
-Cards - Static  | Free Home Delivery | Try Burgers | Tandoor | 5 cards
-View Details 
-Cart 
-Tables  Cart -> name | number | payment -> Send order Details Over SMS 
+Banners - Easy 
+Catogry Chips | Filter 
+List Of Items 
+
+Explore 
+onclick load the list 
+
+Details 
+Add to Cart 
+
+Checkout
+Phone - 2Factor or any othter SmS 
+Name
+Place Order  - Send Order Details 
+
+Load Menu - Live Test 
 
 
 
