Add card component and integrate into table page for enhanced item display
- Introduced a new Card component to showcase menu items with images and action buttons, improving visual appeal and user interaction.
- Updated the table page to include a Cards section, displaying multiple items with links for exploration.
- Enhanced global CSS to include styles for hiding scrollbars, improving the overall user interface.

--- a/todo
+++ b/todo
@@ -1,6 +1,5 @@
 Tables 
 
-Banners - Easy 
 Catogry Chips | Filter 
 List Of Items 
 
@@ -11,7 +10,7 @@ Details
 Add to Cart 
 
 Checkout
-Phone - 2Factor or any othter SmS 
+Phone - 2Factor or any othter Sm 
 Name
 Place Order  - Send Order Details 
 
