Update todo list and enhance ChipList component styling
- Added functionality for "Add to Cart" with quantity style fix and introduced a badge count in the bottom navigation.
- Improved the ChipList component by refining button styles for better visual consistency and user interaction.

--- a/todo
+++ b/todo
@@ -1,18 +1,24 @@
 Tables 
 
-Catogry Chips | Filter 
-List Of Items 
+ On Click Add To Cart With Quanityt Style Fix | Cart Context 
+Add a Small Badge Count in Bottom Nav
 
 Explore 
 onclick load the list 
 
 Details 
-Add to Cart 
+Add to Cart Logic & Style
 
 Checkout
 Phone - 2Factor or any othter Sm 
 Name
 Place Order  - Send Order Details 
+
+
+
+
+
+
 
 Load Menu - Live Test 
 
