Implement OTP authentication system with 2Factor API
- Added API endpoints for sending and verifying OTPs using the 2Factor service.
- Created a new TestOTPTablesPage component for user interaction, allowing users to send and verify OTPs.
- Updated the todo list to reflect changes in the authentication flow.
- Documented the setup and usage of the OTP authentication system in TABLE_OTP_SETUP.md.

--- a/todo
+++ b/todo
@@ -1,11 +1,11 @@
 Tables 
 
-1.Add to Cart | Count in Bottom Navigation 
-2.Checkout Auth OTP Better Auth session 
-3. place Order 
+1. Cart | Checkout | Details 
+2. Auth Session Just Verify OTP No Need Of AuthSession As its Tables 
+3. Explore | Explore Details | Add to Cart 
+ 
 
-Load Menu - Live Test 
-
+Load Menu - Live Test - Auth & Speed Test
 
 
 
