Refactor cart page layout and enhance user experience
- Updated the cart page to include a Lottie animation for empty cart state, replacing the static image.
- Improved item display with enhanced styling and layout adjustments for better readability and interaction.
- Streamlined quantity controls and item removal functionality, ensuring a more intuitive user experience.
- Added a fixed bottom section for total amount display and order placement, enhancing accessibility during checkout.

--- a/todo
+++ b/todo
@@ -1,8 +1,7 @@
 Tables 
 
-1. Cart | Checkout | Details 
-2. Auth Session Just Verify OTP No Need Of AuthSession As its Tables 
-3. Explore | Explore Details | Add to Cart 
+1. Checkout | Details 
+2. Explore | Explore Details | Add to Cart - Auth Still Missing 
  
 
 Load Menu - Live Test - Auth & Speed Test
